[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/Icons/tech.png" type="Texture" id=1]
[ext_resource path="res://Data/GUI/slot.png" type="Texture" id=2]
[ext_resource path="res://Data/Icons/gear.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Fade-In"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 640 ), Vector2( 315, 720 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade-Out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 720 ), Vector2( 315, 640 ) ]
}

[node name="Inventory" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -325.0
margin_top = -80.0
margin_right = 325.0
margin_bottom = 6.10352e-05
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Scroll"]
margin_right = 650.0
margin_bottom = 80.0001
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 15
columns = 6

[node name="Slot1" type="TextureButton" parent="Scroll/Grid"]
margin_right = 95.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="TextureButton" parent="Scroll/Grid"]
margin_left = 110.0
margin_right = 205.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="TextureButton" parent="Scroll/Grid"]
margin_left = 220.0
margin_right = 315.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="TextureButton" parent="Scroll/Grid"]
margin_left = 330.0
margin_right = 425.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot5" type="TextureButton" parent="Scroll/Grid"]
margin_left = 440.0
margin_right = 535.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot6" type="TextureButton" parent="Scroll/Grid"]
margin_left = 550.0
margin_right = 645.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Scroll/Grid/Slot6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade-In = SubResource( 1 )
anims/Fade-Out = SubResource( 2 )
